# wpr1

./: .gitignore  LICENSE  README.md
wpr1_behaviors/: CMakeLists.txt  package.xml
wpr1_behaviors/include/: dock_detect.h  obj_track.h
wpr1_behaviors/launch/: all_app.launch  dock_app.launch  follow_app.launch  follow_demo.launch  follow_monitor.launch  grab_app.launch  grab_demo.launch  grab_monitor.launch  grab_odom.launch  pass_app.launch
wpr1_behaviors/rviz/: obj_detect.rviz  obj_detect_qhd.rviz  plane_detect.rviz
wpr1_behaviors/src/: wpr1_dock_server.cpp  wpr1_follow_server.cpp  wpr1_grab_action.cpp  wpr1_grab_box.cpp  wpr1_grab_rack.cpp  wpr1_grab_server.cpp  wpr1_pass_server.cpp  wpr1_place_action.cpp  wpr1_place_box.cpp
wpr1_bringup/: CMakeLists.txt  package.xml
wpr1_bringup/config/: wpr1_zeros.yaml
wpr1_bringup/include/: MPU_driver.h  Mani_driver.h  SerialCom.h  WPR1_driver.h
wpr1_bringup/launch/: base_mani_imu_lidar.launch  base_only.launch  calibrate_vel.launch  imu_test.launch  js_ctrl.launch  js_monitor.launch  kinect_mani.launch  kinect_monitor.launch  kinect_only.launch  kinect_test.launch  lidar_local.launch  lidar_only.launch  mani_local.launch  mani_only.launch  mani_test.launch  normal.launch  urdf.launch
wpr1_bringup/rviz/: Kinect_desk.rviz  Kinect_room.rviz  docking.rviz  js_odom.rviz  laser_map.rviz  nav.rviz  sensor.rviz  urdf.rviz
wpr1_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh  install_for_kinetic.sh  install_for_melodic.sh  install_for_noetic.sh  wpr1.rules
wpr1_bringup/src/: wpr1_cali_vel.cpp  wpr1_core.cpp  wpr1_imu.cpp  wpr1_imu_odometry.cpp  wpr1_js_velcmd.cpp  wpr1_lidar_tf.cpp  wpr1_mani_test.cpp  wpr1_manipulator.cpp  wpr1_motor_encoder.cpp
wpr1_bringup/src/driver/: MPU_driver.cpp  Mani_driver.cpp  SerialCom.cpp  WPR1_driver.cpp
wpr1_bringup/urdf/: wpr1.urdf
wpr1_local_planner/: CMakeLists.txt  package.xml  wpr1_local_planner_plugin.xml
wpr1_local_planner/include/wpr1_local_planner/: wl_helper.h  wpr1_local_planner.h
wpr1_local_planner/src/: wl_helper.cpp  wpr1_local_planner.cpp
wpr1_remote/: CMakeLists.txt  package.xml
wpr1_remote/launch/: 10_home_all.launch  display_monitor.launch  face_detect_monitor.launch  gmapping_app.launch  gmapping_monitor.launch  hector_mapping_app.launch  hector_mapping_monitor.launch  joint_control_app.launch  nav_app.launch  nav_monitor.launch
wpr1_tutorials/: CMakeLists.txt  package.xml
wpr1_tutorials/include/: action_manager.h  struct.h
wpr1_tutorials/launch/: 10_home.launch  10_home_all.launch  10_home_monitor.launch  11_object.launch  12_person_reco.launch  13_speech_recognition.launch  1_follow.launch  2_gpsr.launch  3d_slam.launch  4_who_is_who.launch  5_shopping.launch  6_free.launch  7_recreational.launch  8_innovation.launch  9_campus.launch  dock_client_demo.launch  face_detect_app.launch  face_detect_demo.launch  follow_client_demo.launch  gmapping.launch  gmapping_monitor.launch  grab_client_demo.launch  hector_mapping.launch  hector_mapping_monitor.launch  image_node_demo.launch  imu_demo.launch  joint_control.launch  joint_control_app.launch  joint_control_monitor.launch  nav.launch  nav_app.launch  pass_client_demo.launch  speak.launch  speech_recognition.launch  sr_cn.launch  wp_grab.launch
wpr1_tutorials/nav_lidar/: costmap_common_params.yaml  local_costmap_params.yaml
wpr1_tutorials/rviz/: 10_home.rviz  3d_slam.rviz  follow.rviz  home_test.rviz  low_obj_detect.rviz  nav.rviz  obj_detect.rviz  slam.rviz
wpr1_tutorials/src/: campus_test.cpp  entrance_detect.cpp  free_test.cpp  gpsr.cpp  home_test.cpp  innovation_test.cpp  object_recognition.cpp  person_recognition.cpp  shopping.cpp  speech_recognition.cpp  sr_cn.cpp  who_is_who.cpp  wpr1_cruise.cpp  wpr1_dock_client.cpp  wpr1_face_detect.cpp  wpr1_follow_client.cpp  wpr1_grab_client.cpp  wpr1_image_node.cpp  wpr1_imu_demo.cpp  wpr1_joint_control.cpp  wpr1_pass_client.cpp  wpr1_simple_goal.cpp  wpr1_speak.cpp  wpr1_sr_follow.cpp  wpr1_velocity_control.cpp  wpr1_wp_grab.cpp
wpr1_tutorials/src/action_manager/: action_manager.cpp
wpr1_tutorials/src/scripts/: 10_home_script.cpp  6_free_script.cpp  8_innovation_script.cpp  9_campus_script.cpp
wpr1_tutorials/srv/: Grab.srv
